samples/_failures_safe/1761366994_eb6662_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6387b01f.c: In function ‘main’:
./samples/SAFE/__tmp_6387b01f.c:162:15: error: expected ‘;’ at end of input
  162 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_6387b01f.c:162:9: error: expected declaration or statement at end of input
  162 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_6387b01f.c:162:9: error: expected declaration or statement at end of input
